--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,9 @@
   "author": "Sarthak",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.2",
     "nodemon": "^3.1.0"
