--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
